# burgerflipper

./: Cargo.toml  README.md  config.json  okex_config.json
src/: config.rs  main.rs
src/strategies/: avellaneda_stoikov.rs  avellaneda_stoikov_okex.rs  mod.rs
src/strategies/indicators/: ema.rs  sma.rs
