[package]
name = "burgerfilpper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "as"
path = "src/bin/as.rs"

[[bin]]
name = "as_okex"
path = "src/bin/as_okex.rs"

[dependencies]
actix-rt = "2.7.0"
anyhow = "1.0.57"
awc = "3.0.0"
bytes = "1.1.0"
chrono = "0.4.19"
csv = "1.1.6"
env_logger = "0.9.0"
exrs = { path = "../exrs" }
float-cmp = "0.9.0"
linreg = "0.2.0"
local-channel = "0.1.3"
log = "0.4.17"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
snmalloc-rs = { version = "0.3.0", features = ["1mib"] }
tokio = "1.19.2"
uuid = { version = "1.1.1", features = ["v4"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.dev]
debug = true
